# flow

./: .gitignore  README.md  package-lock.json  package.json
engine/: flow.py  flow_server.py
engine/flow_ui/: app.js  index.html  style.css
engine/workers/: backend_coreml.py  backend_detect.py  backend_nemo_cuda.py  backend_nemo_mps.py  backend_onnx.py  parakeet_worker.py
requirements/: linux_cuda.txt  mac.txt  windows.txt
scripts/: export_onnx.py  setup_linux.sh  setup_mac.sh  setup_windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: flow_server-x86_64-pc-windows-msvc.bat  flow_server-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  mini_bar.html
