[package]
name = "flow"
version = "1.0.0"
description = "Flow — offline speech-to-text"
authors = ["Ridhira"]
edition = "2021"

[lib]
name = "flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "flow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
